--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .headline{
     display:flex;
-    background-color:#cccccc;
+    background-color:#E8C872;
     height:70px;
     align-items:center;
 }
@@ -43,7 +43,7 @@
 .list2{
     display:none;
     position:fixed;
-    background-color: white;
+    background-color: #FFF3CF;
     top: 10px;
     right: 10px;
     width:100px;
@@ -54,35 +54,35 @@
     justify-content:center;
     align-items:center;
     height:80px;
-    background-color: white;
+    background-color: #FFF3CF;
 }
 .it1{
     display:flex;
     justify-content:center;
     align-items:center;
     height:80px;
-    background-color: white;
+    background-color: #FFF3CF;
 }
 .it2{
     display:flex;
     justify-content:center;
     align-items:center;
     height:80px;
-    background-color: white;
+    background-color: #FFF3CF;
 }
 .it3{
     display:flex;
     justify-content:center;
     align-items:center;
     height:80px;
-    background-color: white;
+    background-color: #FFF3CF;
 }
 .it4{
     display:flex;
     justify-content:center;
     align-items:center;
     height:80px;
-    background-color: white;
+    background-color: #FFF3CF;
 }
 .listpicture{
     display:flex;
@@ -98,7 +98,7 @@
     align-items:center;
     position: inline-block;
     height:300px;
-    background-color:rgb(124, 128, 182);
+    background-color:#C9D7DD;
     display:flex;
 }
 .welcome2{
@@ -106,7 +106,7 @@
     align-items:center;
     position: inline-block;
     height:300px;
-    background-color:rgb(124, 128, 182);
+    background-color:#C9D7DD;
     display:none;
 }
 .text{
@@ -137,7 +137,7 @@
     width:45%;
     height:150px;
     margin:10px;
-    background-color:pink;
+    background-color: #637A9F;
     justify-content:center;
     align-items:center;
 }
@@ -147,7 +147,7 @@
     width:45%;
     height:150px;
     margin:10px;
-    background-color:pink;
+    background-color: #637A9F;
     justify-content:center;
     align-items:center;
 }
@@ -157,7 +157,7 @@
     width:45%;
     height:150px;
     margin:10px;
-    background-color:pink;
+    background-color:#637A9F;
     justify-content:center;
     align-items:center;
 }
@@ -167,7 +167,7 @@
     width:45%;
     height:150px;
     margin:10px;
-    background-color:pink;
+    background-color: #637A9F;
     justify-content:center;
     align-items:center;
 }
