--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,12 @@
     justify-content:center;
     align-items:center;
 }
+.section2 iframe{
+    width:90%;
+    height:90%;
+    justify-content:center;
+    align-items:center;
+}
 .t1{
     font-size:20px;
     font-weight:bold;
