--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,20 @@
     background-color:#E8C872;
     height:70px;
     align-items:center;
+    font-family: Georgia, serif;
 }
 .title{
     font-size:30px;
     font-weight:bold;
     flex:none;
     margin-left:10px;
+    font-family: Georgia, serif;
 }
 .list1{
     display: flex;
     width:50%;
     justify-content:flex-end;
+    font-family: Georgia, serif;
     flex:auto;
 }
 .item1{
@@ -21,18 +24,27 @@
     width:15%;
     margin-right:10px;
     text-align:center;
+    font-size: 20px;
+    font-family: Georgia, serif;
+    color: black;
 }
 .item2{
     flex:none;
     width:15%;
     margin-right:10px;
     text-align:center;
+    font-family: Georgia, serif;
+    font-size: 20px;
+    color: black;
 }
 .item3{
     flex:none;
     width:15%;
     margin-right:10px;
     text-align:center;
+    font-size: 20px;
+    font-family: Georgia, serif;
+    color: black;
 }
 .list2{
     display:none;
@@ -187,3 +199,26 @@
         display:block;
     }
 }
+
+a:link {
+    color: black;
+    text-decoration: none;
+  }
+  
+  /* visited link */
+  a:visited {
+    color: black;
+    text-decoration: none;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: black;
+    text-decoration: none;
+  }
+  
+  /* selected link */
+  a:active {
+    color: black;
+    text-decoration: none;
+  }
