--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,7 @@
     height:300px;
     background-color:#C9D7DD;
     display:flex;
+    font-family: Georgia, serif;
 }
 .welcome2{
     justify-content:center;
@@ -114,6 +115,7 @@
     height:300px;
     background-color:#C9D7DD;
     display:none;
+    font-family: Georgia, serif;
 }
 .text{
     text-align: center;
@@ -129,6 +131,7 @@
 .menu{
     font-size:30px;
     font-weight:bold;
+    font-family: Georgia, serif;
 }
 
 .section{
