--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,40 @@
+* {
+    margin: 0; /*make the webpage fill out the window*/
+}
 .headline{
-    display:flex;
-    background-color:#E8C872;
-    height:70px;
-    align-items:center;
-    font-family: Georgia, serif;
-}
-.title{
-    font-size:30px;
-    font-weight:bold;
-    flex:none;
-    margin-left:10px;
-    font-family: Georgia, serif;
-}
-.list1{
     display: flex;
-    width:50%;
-    justify-content:flex-end;
+    background-color: #E8C872;
+    height: 70px;
+    align-items: center;
     font-family: Georgia, serif;
-    flex:auto;
 }
-.item1{
-    flex:none;
-    width:15%;
-    margin-right:10px;
+.name{
+    font-size: 30px;
+    font-weight: bold;
+    font-family: Georgia, serif;
+    margin-left:10px;
+}
+.category{
+    display: flex;
+    justify-content: flex-end; /*go to the left*/
+    flex: auto;
+}
+.about{
+    width: 10%;
     text-align:center;
     font-size: 20px;
     font-family: Georgia, serif;
     color: black;
 }
-.item2{
-    flex:none;
-    width:15%;
-    margin-right:10px;
+.projects{
+    width: 10%;
     text-align:center;
     font-family: Georgia, serif;
     font-size: 20px;
     color: black;
 }
-.item3{
-    flex:none;
-    width:15%;
-    margin-right:10px;
+.cello{
+    width: 10%;
     text-align:center;
     font-size: 20px;
     font-family: Georgia, serif;
