--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,13 @@
     font-size: 20px;
     color: black;
 }
+.posts{
+    width: 10%;
+    text-align:center;
+    font-family: Georgia, serif;
+    font-size: 20px;
+    color: black;
+}
 .cello{
     width: 10%;
     text-align:center;
