--- a/styles.css
+++ b/styles.css
@@ -137,47 +137,81 @@
 
 .section{
     display:flex;
-    flex-wrap:wrap;
     justify-content:center;
     align-items:center;
+    margin: 10px;
 }
 .section1{
-    display:flex;
-    flex:none;
-    width:45%;
-    height:400px;
+    display: flex;
+    flex-direction: column;
+    width: 600px;
+    height:450px;
     margin:10px;
     background-color: #637A9F;
     justify-content:center;
     align-items:center;
 }
-.section1 a{
+.postpic {
+    display: flex;
     width:90%;
     height:90%;
     justify-content:center;
     align-items:center;
 }
 .section1 img{
-    width:100%;
-    height:100%;
+    width: 90%;
+    height:90%;
     justify-content:center;
     align-items:center;
 }
 .section2{
     display:flex;
+    flex-direction: column;
     flex:none;
     width:45%;
-    height:400px;
+    height:450px;
     margin:10px;
     background-color: #637A9F;
     justify-content:center;
     align-items:center;
 }
 .section2 iframe{
-    width:90%;
-    height:90%;
+    width:80%;
+    height:80%;
     justify-content:center;
     align-items:center;
+}
+.subtitle {
+    display: flex;
+    text-align:center;
+    align-items: center;
+    justify-items: center;
+    font-family: Georgia, serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    margin-top: 20px;
+}
+.subtitle1 {
+    display: flex;
+    text-align:center;
+    align-items: center;
+    justify-items: center;
+    font-family: Georgia, serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    margin-bottom: 20px;
+}
+.subinfo {
+    display: flex;
+    text-align:center;
+    align-items: center;
+    justify-items: center;
+    font-family: Georgia, serif;
+    font-size: 20px;
+    color: black;
+    margin-bottom: 20px;
 }
 .t1{
     font-size:20px;
