--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@
     border-radius: 25px;
     flex-direction: column;
     flex:none;
-    width:45%;
+    width:600px;
     height:450px;
     margin:10px;
     background-color: #637A9F;
