--- a/styles.css
+++ b/styles.css
@@ -227,6 +227,9 @@
     color: black;
     margin-bottom: 20px;
 }
+.subinfo :hover {
+    color: white;
+}
 .t1{
     font-size:20px;
     font-weight:bold;
