--- a/styles.css
+++ b/styles.css
@@ -113,27 +113,18 @@
 }
 
 .welcome1{
-    justify-content:center;
-    align-items:center;
-    position: inline-block;
-    height:300px;
-    background-color:#C9D7DD;
     display:flex;
-    font-family: Georgia, serif;
-}
-.welcome2{
     justify-content:center;
     align-items:center;
     position: inline-block;
     height:300px;
     background-color:#C9D7DD;
-    display:none;
-    font-family: Georgia, serif;
 }
 .text{
     text-align: center;
-    font-size:50px;
-    font-weight:bold;
+    font-size: 30px;
+    font-style: italic;
+    font-family: Lucida;
 }
 .subject{
     display:flex;
