--- a/styles.css
+++ b/styles.css
@@ -1,150 +1,101 @@
 * {
     margin: 0; /*make the webpage fill out the window*/
 }
-.headline{
+.headline {
     display: flex;
     background-color: #E8C872;
     height: 70px;
     align-items: center;
     font-family: Georgia, serif;
 }
-.name{
+.name {
     font-size: 30px;
     font-weight: bold;
     font-family: Georgia, serif;
     margin-left:10px;
 }
-.category{
+.category {
     display: flex;
     justify-content: flex-end; /*go to the left*/
     flex: auto;
 }
-.about{
+.about {
     width: 10%;
     text-align:center;
     font-size: 20px;
     font-family: Georgia, serif;
     color: black;
 }
-.about :hover{
+.about :hover {
     color: white;
 }
-.projects{
+.projects {
     width: 10%;
     text-align:center;
     font-family: Georgia, serif;
     font-size: 20px;
     color: black;
 }
-.projects :hover{
+.projects :hover {
     color: white;
 }
-.posts{
+.posts {
     width: 10%;
     text-align:center;
     font-family: Georgia, serif;
     font-size: 20px;
     color: black;
 }
-.posts :hover{
+.posts :hover {
     color: white;
 }
-.cello{
+.cello {
     width: 10%;
     text-align:center;
     font-size: 20px;
     font-family: Georgia, serif;
     color: black;
 }
-.cello :hover{
+.cello :hover {
     color: white;
 }
-.list2{
-    display:none;
-    position:fixed;
-    background-color: #FFF3CF;
-    top: 10px;
-    right: 10px;
-    width:100px;
-    height:400px;
-}
-.it0{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:80px;
-    background-color: #FFF3CF;
-}
-.it1{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:80px;
-    background-color: #FFF3CF;
-}
-.it2{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:80px;
-    background-color: #FFF3CF;
-}
-.it3{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:80px;
-    background-color: #FFF3CF;
-}
-.it4{
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:80px;
-    background-color: #FFF3CF;
-}
-.listpicture{
-    display:flex;
-    width:50%;
-    text-align:end;
-    flex:auto;
-    margin:10px;
-    display:none;
-}
-
-.welcome1{
+.welcome {
     display:flex;
     justify-content:center;
     align-items:center;
     position: inline-block;
     height:300px;
-    background-color:#C9D7DD;
+    background: linear-gradient(100deg, lightblue,#C9D7DD);
 }
-.text{
+.text {
     text-align: center;
     font-size: 30px;
     font-style: italic;
     font-family: Lucida;
+    
 }
-.subject{
+.subject {
     display:flex;
     justify-content:center;
     align-items:center;
     height:50px;
 }
-.menu{
+.menu {
     font-size:30px;
     font-weight:bold;
     font-family: Georgia, serif;
 }
 
-.section{
+/* section */
+.section {
     display:flex;
     justify-content:center;
     align-items:center;
     margin: 10px;
 }
-.section1{
+
+/* section 1 */
+.section1 {
     border-radius: 25px;
     display: flex;
     flex-direction: column;
@@ -155,6 +106,17 @@
     justify-content:center;
     align-items:center;
 }
+.subtitle1 {
+    display: flex;
+    text-align:center;
+    align-items: center;
+    justify-items: center;
+    font-family: Georgia, serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    margin-top: 20px;
+}
 .postpic {
     display: flex;
     width:90%;
@@ -162,13 +124,15 @@
     justify-content:center;
     align-items:center;
 }
-.section1 img{
+.section1 img {
     width: 90%;
     height:90%;
     justify-content:center;
     align-items:center;
 }
-.section2{
+
+/* section2 */
+.section2 {
     display:flex;
     border-radius: 25px;
     flex-direction: column;
@@ -180,24 +144,7 @@
     justify-content:center;
     align-items:center;
 }
-.section2 iframe{
-    width:80%;
-    height:80%;
-    justify-content:center;
-    align-items:center;
-}
-.subtitle {
-    display: flex;
-    text-align:center;
-    align-items: center;
-    justify-items: center;
-    font-family: Georgia, serif;
-    font-size: 20px;
-    font-weight: bold;
-    color: black;
-    margin-top: 20px;
-}
-.subtitle1 {
+.subtitle2 {
     display: flex;
     text-align:center;
     align-items: center;
@@ -207,6 +154,12 @@
     font-weight: bold;
     color: black;
     margin-bottom: 20px;
+}
+.section2 iframe {
+    width:80%;
+    height:80%;
+    justify-content:center;
+    align-items:center;
 }
 .subinfo {
     display: flex;
@@ -221,31 +174,8 @@
 .subinfo :hover {
     color: white;
 }
-.t1{
-    font-size:20px;
-    font-weight:bold;
-}
-.t2{
-    font-size:20px;
-    font-weight:bold;
-}
-.t3{
-    font-size:20px;
-    font-weight:bold;
-}
-.t4{
-    font-size:20px;
-    font-weight:bold;
-}
-@media (max-width:500px){
-    .list1{
-        display:none;
-    }
-    .listpicture{
-        display:block;
-    }
-}
 
+/* footer */
 .footer {
     display: flex;
     gap: 20px;
@@ -262,24 +192,24 @@
 }
 
 a:link {
-    color: black;
-    text-decoration: none;
-  }
-  
-  /* visited link */
-  a:visited {
-    color: black;
-    text-decoration: none;
-  }
-  
-  /* mouse over link */
-  a:hover {
-    color: black;
-    text-decoration: none;
-  }
-  
-  /* selected link */
-  a:active {
-    color: black;
-    text-decoration: none;
-  }
+color: black;
+text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+color: black;
+text-decoration: none;
+}
+
+/* mouse over link */
+a:hover {
+color: black;
+text-decoration: none;
+}
+
+/* selected link */
+a:active {
+color: black;
+text-decoration: none;
+}
