--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,10 @@
     color: black;
     margin-bottom: 20px;
 }
+.subinfo a {
+    color: black;
+    text-decoration: none;
+}
 .subinfo :hover {
     color: white;
 }
@@ -217,6 +221,9 @@
 }
 .footer_content {
     font-family: Georgia, serif;
+}
+.icon {
+    color: black;
 }
 .icon :hover {
     color: lightblue;
