--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@
     height:50px;
 }
 .menu {
+    margin-top: 20px;
     font-size:30px;
     font-weight:bold;
     font-family: Georgia, serif;
